fix featurette-img stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,8 @@ h3 {
 
 .featurette-image {
     background-size: cover;
+    width: 500px;
+    height: auto;
 }
 
 .card {
